<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cbac"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/problemBtn"
        android:layout_width="232dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="340dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/problem"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="452dp" />

    <Button
        android:id="@+id/websiteBtn"
        android:layout_width="225dp"
        android:layout_height="59dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="222dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/website"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="452dp" />

    <Switch
        android:id="@+id/Logout"
        android:layout_width="165dp"
        android:layout_height="49dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="3dp"
        android:text="@string/log"
        android:textAlignment="textEnd"
        android:textColor="#FA1F0F"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="237dp"
        tools:layout_editor_absoluteY="5dp" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="127dp" />
</RelativeLayout>