<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cbac"
    tools:context=".Helpline">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="388dp"
        android:layout_height="217dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="453dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="35dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/button"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="251dp"
        android:backgroundTint="#4CAF50"
        android:text="ছবি যুক্ত করুন"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="39dp" />


    <Button
        android:id="@+id/button2"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="253dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/infosend"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="277dp" />

    <Switch
        android:id="@+id/Logout1"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/log"
        android:textAlignment="textEnd"
        android:textColor="#FA1F0F"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="247dp"
        android:layout_height="71dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="310dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/phonetext"
        android:textColor="#E91E63"
        android:textSize="18dp"
        android:textStyle="bold" />

</RelativeLayout>