<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cbac"
    tools:context=".Problem">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="388dp"
        android:layout_height="217dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="453dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="35dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/button"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="195dp"
        android:backgroundTint="#4CAF50"
        android:text="ছবি যুক্ত করুন"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="39dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="195dp"
        android:backgroundTint="#4CAF50"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="16dp"
        android:text="সমাধান দেখুন"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="277dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="314dp"
        android:layout_height="167dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="24dp"
        android:text="ছবি যুক্ত করুন এবং সমাধান দেখুন"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="39dp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="196dp"
        android:layout_marginBottom="129dp"
        android:backgroundTint="#E91E63"
        android:text="@string/speak"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/Logout1"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/log"
        android:textAlignment="textEnd"
        android:textColor="#FA1F0F"
        android:textSize="14sp" />

    <Button
        android:id="@+id/helpBtn"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="129dp"
        android:backgroundTint="#F41E0E"
        android:text="@string/helpline"
        android:textColor="#FFFFFF"
        android:textColorHint="#F44336"
        android:textSize="18dp"
        android:textStyle="bold" />

</RelativeLayout>